Summary of Changes
   * Changes to ffmpeg.h/ffmpeg.c to allow for compiling without ffmpeg/libav or with older versions.
   * Merge mymalloc, free and casting changes from Alfred Klomp
   * Merge bug fix for sizeof from Alfred Klomp
   * Rewrote timelapse so that it works
   * Merge tosiara changes for version number
   * Add copyright file for features added since 3.2.12
   * Cleanup ffmpeg.c and plug memory leak
   * Add support for latest version of ffmpeg/libav
   * Tidy up packaging changes
   * Add packaging fixes (infinity0)
   * Revise version.sh to put out the git commit.
   * Rollback revision to allow for a formal pull request.
   * Reimplement changes not to be included in pull request from tosiara commit 9ebee031
   * Implement requirement of modulo 16 to avoid seg fault when opening stream
   * Add debian build files from trusty(14.04)
   * Revise default values for motion.conf
   * Revise CHANGELOG to conform with debian format
   * Revised debian packaging files
   * Implement new sequence for this file (CHANGELOG) newest to oldest.

3.4.0 Summary of Changes

Features
   * Insert Blanking frames http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x12x16x132522 (Dag Erlandsson)
   * IPV6 for http-control and webcam stream not netcam yet http://www.lavrsen.dk/twiki/bin/view/Motion/IPv6 
     (Jeroen Massar & Angel Carpintero) 
   * Experimental approach for MJPEG streams (Motion JPEG) for network cameras 
     http://www.lavrsen.dk/twiki/bin/view/Motion/LinksysWVC200SupportPatch ( ... )  
   * Add draw a RED box around the movement as default (Joerg Weber)
   * Add write/read nonblock functions in webhttpd( timeout on read/write). (Angel Carpintero) 
   * More changes in option names from http://www.lavrsen.dk/twiki/bin/view/Motion/IntuitiveOptionNamesDiscussion
     (Angel Carpintero)
   * motion_locate new parameter names : red , center , redcross  instead of only on, off. (Angel Carpintero)