@@ -1,4 +1,9 @@
 Summary of Changes
+   * Lock thread on ffmpeg/libav init and open_codec
+   * Revise version number generated by script to indicate Unofficial-Git-'hash'
+   * Revised Changelog description for version 3.4
+   * Merge OpenBSD fixes from sthen pull request
+   * Revised picture.c to allow for modulo 8 pictures and adjusted netcam modules accordingly as well.
    * Changes to ffmpeg.h/ffmpeg.c to allow for compiling without ffmpeg/libav or with older versions.
    * Merge mymalloc, free and casting changes from Alfred Klomp
    * Merge bug fix for sizeof from Alfred Klomp
